--- a/styles.css
+++ b/styles.css
@@ -320,6 +320,10 @@
         margin-bottom: 1vh;
     }
 
+    .testimonial-headline {
+        width: 80%;
+    }
+
     /*Newsletter styles*/
 
     #newsletter-section {
@@ -327,9 +331,43 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 20vh;
+        height: 40vh;
         background-color: #758A48;
+        color: white;
     }
+
+    .newsletter-wrapper {
+        margin: 3vh 0;
+    }
+
+    .email-button {
+        border: none;
+        font-size: 15px;
+        background-color: black;
+        color: white;
+        padding: 1vh;
+
+    }
+    #email {
+        border: none;
+        font-size: 15px;
+        color: white;
+        padding: 1vh;
+
+    }
+
+    .newsletter-headline {
+        margin-bottom: 1vh;
+        text-align: center;
+    }
+    .newsletter-headline h2{
+        color: white;
+        font-size: 35px;
+        text-align: center;
+        font-weight: 900;
+        margin-bottom: 1vh;
+    }
+
 
     /*Footer styles*/
 
@@ -364,6 +402,11 @@
         min-width: 45vw;
         padding: 2vh 2vw;
         width: 100%;
+      }
+
+      .footer-item a  {
+        text-decoration: none;
+        color: white
       }
 
       .footer-item span {
@@ -679,9 +722,824 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 20vh;
+        height: 30vh;
+        background-color: #758A48;
+        color: white;
+    }
+
+    .newsletter-wrapper {
+        margin: 3vh 0;
+    }
+
+    .email-button {
+        border: none;
+        font-size: 15px;
+        background-color: black;
+        color: white;
+        padding: 1vh;
+
+    }
+    #email {
+        border: none;
+        font-size: 15px;
+        color: white;
+        padding: 1vh;
+
+    }
+
+    .newsletter-headline {
+        margin-bottom: 1vh;
+        text-align: center;
+    }
+    .newsletter-headline h2{
+        color: white;
+        font-size: 35px;
+        text-align: center;
+        font-weight: 900;
+        margin-bottom: 1vh;
+    }
+
+    /*footer styles */
+
+    #main-footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: fit-content;
+        color: white;
+        background-color: #000000;
+        padding: 6vh 2vw;
+    }
+
+    .footer-copyright-content {
+        width: 100%;
+    }
+
+    .footer-grid {
+
+
+
+        display: grid;
+        align-items: center;
+        justify-items: start;
+        grid-template-columns: repeat(2,  2fr);
+        gap: 20px;
+        width: 100%;
+        padding: 2vh 2vw;
+      }
+
+      .footer-item {
+        text-align: start;
+        min-width: 45vw;
+        padding: 2vh 2vw;
+        width: 100%;
+      }
+
+      .footer-item span {
+        width: 100%;
+      }
+
+
+
+
+
+}
+
+/*  769px — 1024px: Small screens, laptops*/
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+
+    body, html, main {
+        width: 100vw;
+    }
+    #home {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: rgb(255, 255, 255);
+        width: 100%;
+        padding: 2vh 6vw;
+    }
+
+    /* menu btn*/
+    .menu {
+        display: none;
+        position: relative;
+        border-radius: 2px;
+        width: 20px;
+        height: 20px;
+        padding: 1px;
+        cursor: pointer;
+    }
+
+    .hamburger-menu, .close-menu {
+        position: absolute;
+        display: none;
+        left: 2px;
+        width: 50px;
+        height: 50px;
+        pointer-events: none;
+        transition: all 2s ease-in-out;
+
+    }
+
+    .hamburger-menu svg, .close-menu svg {
+        width: 30px;
+        height: 30px;
+    }
+
+    .active {
+        display: flex !important;
+        transition: all 2s ease-in-out;
+    }
+
+    .main-nav ul {
+
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-evenly;
+        background-color: #ffffff;
+        top: 10vh;
+        right: 0;
+        color: rgb(0, 0, 0);
+        height: 10vh;
+        width: 40vw;
+        transition: all .4s ease-in-out;
+
+
+    }
+
+    .main-nav ul a{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        font-family: var(--roboto);
+        font-weight: 500;
+        color: rgb(0, 0, 0);
+        width: 100%;
+        height: 5vh;
+    }
+
+    .main-nav ul li {
+        list-style: none;
+        font-family: var(--roboto);
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        font-family: var(--roboto);
+        font-weight: 500;
+        padding-left: 2vw;
+        width: 100%;
+        height: 100%;
+    }
+    .main-nav ul li:hover {
+        list-style: none;
         background-color: #758A48;
     }
+
+    /* Hero section*/
+
+    #hero-section {
+        position: relative;
+        display: flex;
+        align-items:end;
+        justify-content: start;
+        height: 90vh;
+        background-color: aquamarine;
+        background: url('./images/beautiful-park.jpg') center/cover no-repeat;
+        padding: 6vh 1vw;
+        z-index: -999;
+    }
+
+
+    .hero-content {
+        background-color: rgba(0, 0, 0, 0.212);
+        padding-right: 10vw;
+        padding-left: 2vw;
+        padding-top: 4vh;
+        padding-bottom: 2vh;
+    }
+
+    .hero-content h1 {
+        color: rgb(255, 255, 255);
+        font-size: 50px;
+        font-family: var(--roboto);
+        margin-bottom: 4vh;
+    }
+
+    .hero-content p {
+
+    color: white;
+    font-size: 20px;
+    margin-bottom: 4vh;
+
+    }
+
+    .hero-btn {
+        border: 2px solid white;
+        background-color: #00640000;
+        color: rgb(255, 255, 255);
+        font-size: 15px;
+        padding: 1vh;
+
+    }
+
+    /*product section*/
+
+    #product-section {
+        min-height: 100vh;
+        background-color: white;
+        color: rgb(0, 0, 0);
+        padding: 6vh 2vw;
+
+    }
+
+    .product-card {
+
+        margin-bottom: 5vh;
+        text-align: start;
+        padding: 4vh 1vw;
+
+    }
+
+    .product-section-wrapper {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .product-image-container {
+        background-color: #76583f00;
+    }
+
+
+    .product-image-container p {
+        display: none;
+    }
+
+
+    .product-image-container img {
+        width: 100%;
+    }
+
+    .product-title {
+        font-size: 30px;
+        font-weight: 900;
+        margin-bottom: 2vh;
+
+    }
+
+    .product-headline  {
+        color: black;
+    }
+
+    .product-headline h2 {
+
+    font-size: 45px;
+    text-align: center;
+    font-weight: 900;
+    margin-bottom: 6vh;
+    color: black;
+    }
+
+    .product-headline p {
+        margin-bottom: 3vh;
+        text-align: center;
+    }
+
+    .product-CTA {
+        width: 100%;
+        height: 6vh;
+        width: 18vw;
+        margin-top: 2vh;
+
+    }
+
+    .product-CTA button {
+        height: 100%;
+        border: none;
+        font-size: 15px;
+        background-color: black;
+        color: white;
+        padding: 1vh 3vw;
+    }
+
+    /* testimonial-section */
+
+   #featured-products {
+        height: auto;
+        background: url('./images/pexels-huy-phan-3076899.jpg') center/cover no-repeat;
+        height: 70vh;
+
+    }
+
+    .featured-products-wrapper  {
+        padding: 4vh 2vw;
+        background-color: black;
+        height: 100%;
+        background: linear-gradient(to bottom, #0000008a, #1abc9c27);
+
+
+
+    }
+
+    .featured-product-title {
+
+    color: rgb(255, 255, 255);
+    font-size: 60px;
+    font-weight: 900;
+    margin-bottom: 3vh;
+    }
+
+    .featured-products-description {
+     color: white;
+     font-size: 18px;
+    }
+
+    /* Testimonial section */
+
+    #testimonial-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 60vh;
+    }
+
+    .testimonial-headline h2 {
+        font-size: 35px;
+        text-align: center;
+        font-weight: 900;
+        margin-bottom: 6vh;
+        color: black;
+    }
+
+    .testimonial-wrapper {
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        background-color: rgba(0, 0, 0, 0.048);
+        min-height: 40%;
+        width: 80%;
+        border-radius: 3px;
+
+    }
+
+    .testimonial-card blockquote {
+        padding: 4vh 4vw;
+    }
+
+    .testimonial-card blockquote p {
+        color: rgb(78, 78, 78);
+        font-size: 15px;
+        margin-bottom: 2vh;
+
+    }
+
+    .testimonial-card blockquote hr {
+        margin-bottom: 1vh;
+    }
+
+    /*Newsletter styles*/
+
+    #newsletter-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 30vh;
+        background-color: #758A48;
+        color: white;
+    }
+
+    .newsletter-wrapper {
+        margin: 3vh 0;
+    }
+
+    .email-button {
+        border: none;
+        font-size: 15px;
+        background-color: black;
+        color: white;
+        padding: 1vh;
+
+    }
+    #email {
+        border: none;
+        font-size: 15px;
+        color: white;
+        padding: 1vh;
+
+    }
+
+    .newsletter-headline {
+        margin-bottom: 1vh;
+        text-align: center;
+    }
+    .newsletter-headline h2{
+        color: white;
+        font-size: 35px;
+        text-align: center;
+        font-weight: 900;
+        margin-bottom: 1vh;
+    }
+
+    /*footer styles */
+
+    #main-footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: fit-content;
+        color: white;
+        background-color: #000000;
+        padding: 6vh 2vw;
+    }
+
+    .footer-copyright-content {
+        width: 100%;
+    }
+
+    .footer-grid {
+
+
+
+        display: grid;
+        align-items: center;
+        justify-items: start;
+        grid-template-columns: repeat(2,  2fr);
+        gap: 20px;
+        width: 100%;
+        padding: 2vh 2vw;
+      }
+
+      .footer-item {
+        text-align: start;
+        min-width: 45vw;
+        padding: 2vh 2vw;
+        width: 100%;
+      }
+
+      .footer-item span {
+        width: 100%;
+      }
+
+
+
+
+
+}
+
+/*  769px — 1024px: Small screens, laptops*/
+@media only screen and (min-width: 1024px)  {
+
+    body, html, main {
+        width: 100vw;
+    }
+    #home {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: rgb(255, 255, 255);
+        width: 100%;
+        padding: 2vh 6vw;
+    }
+
+    /* menu btn*/
+    .menu {
+        display: none;
+        position: relative;
+        border-radius: 2px;
+        width: 20px;
+        height: 20px;
+        padding: 1px;
+        cursor: pointer;
+    }
+
+    .hamburger-menu, .close-menu {
+        position: absolute;
+        display: none;
+        left: 2px;
+        width: 50px;
+        height: 50px;
+        pointer-events: none;
+        transition: all 2s ease-in-out;
+
+    }
+
+    .hamburger-menu svg, .close-menu svg {
+        width: 30px;
+        height: 30px;
+    }
+
+    .active {
+        display: flex !important;
+        transition: all 2s ease-in-out;
+    }
+
+    .main-nav ul {
+
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-evenly;
+        background-color: #ffffff;
+        top: 10vh;
+        right: 0;
+        color: rgb(0, 0, 0);
+        height: 10vh;
+        width: 40vw;
+        transition: all .4s ease-in-out;
+
+
+    }
+
+    .main-nav ul a{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        font-family: var(--roboto);
+        font-weight: 500;
+        color: rgb(0, 0, 0);
+        width: 100%;
+        height: 5vh;
+    }
+
+    .main-nav ul li {
+        list-style: none;
+        font-family: var(--roboto);
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        font-family: var(--roboto);
+        font-weight: 500;
+        padding-left: 2vw;
+        width: 100%;
+        height: 100%;
+    }
+    .main-nav ul li:hover {
+        list-style: none;
+        background-color: #758A48;
+    }
+
+    /* Hero section*/
+
+    #hero-section {
+        position: relative;
+        display: flex;
+        align-items:end;
+        justify-content: start;
+        height: 90vh;
+        background-color: aquamarine;
+        background: url('./images/beautiful-park.jpg') center/cover no-repeat;
+        padding: 6vh 1vw;
+        z-index: -999;
+    }
+
+
+    .hero-content {
+        background-color: rgba(0, 0, 0, 0.212);
+        padding-right: 10vw;
+        padding-left: 2vw;
+        padding-top: 4vh;
+        padding-bottom: 2vh;
+    }
+
+    .hero-content h1 {
+        color: rgb(255, 255, 255);
+        font-size: 50px;
+        font-family: var(--roboto);
+        margin-bottom: 4vh;
+    }
+
+    .hero-content p {
+
+    color: white;
+    font-size: 20px;
+    margin-bottom: 4vh;
+
+    }
+
+    .hero-btn {
+        border: 2px solid white;
+        background-color: #00640000;
+        color: rgb(255, 255, 255);
+        font-size: 15px;
+        padding: 1vh;
+
+    }
+
+    /*product section*/
+
+    #product-section {
+        min-height: 100vh;
+        background-color: white;
+        color: rgb(0, 0, 0);
+        padding: 6vh 2vw;
+
+    }
+
+    .product-card {
+
+        margin-bottom: 5vh;
+        text-align: start;
+        padding: 4vh 1vw;
+
+    }
+
+    .product-section-wrapper {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .product-image-container {
+        background-color: #76583f00;
+    }
+
+
+    .product-image-container p {
+        display: none;
+    }
+
+
+    .product-image-container img {
+        width: 100%;
+    }
+
+    .product-title {
+        font-size: 30px;
+        font-weight: 900;
+        margin-bottom: 2vh;
+
+    }
+
+    .product-headline  {
+        color: black;
+    }
+
+    .product-headline h2 {
+
+    font-size: 45px;
+    text-align: center;
+    font-weight: 900;
+    margin-bottom: 6vh;
+    color: black;
+    }
+
+    .product-headline p {
+        margin-bottom: 3vh;
+        text-align: center;
+    }
+
+    .product-CTA {
+        width: 100%;
+        height: 6vh;
+        width: 18vw;
+        margin-top: 2vh;
+
+    }
+
+    .product-CTA button {
+        height: 100%;
+        border: none;
+        font-size: 15px;
+        background-color: black;
+        color: white;
+        padding: 1vh 3vw;
+    }
+
+    /* testimonial-section */
+
+   #featured-products {
+        height: auto;
+        background: url('./images/pexels-huy-phan-3076899.jpg') center/cover no-repeat;
+        height: 70vh;
+
+    }
+
+    .featured-products-wrapper  {
+        padding: 4vh 2vw;
+        background-color: black;
+        height: 100%;
+        background: linear-gradient(to bottom, #0000008a, #1abc9c27);
+
+
+
+    }
+
+    .featured-product-title {
+
+    color: rgb(255, 255, 255);
+    font-size: 60px;
+    font-weight: 900;
+    margin-bottom: 3vh;
+    }
+
+    .featured-products-description {
+     color: white;
+     font-size: 18px;
+    }
+
+    /* Testimonial section */
+
+    #testimonial-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 60vh;
+    }
+
+    .testimonial-headline h2 {
+        font-size: 35px;
+        text-align: center;
+        font-weight: 900;
+        margin-bottom: 6vh;
+        color: black;
+    }
+
+    .testimonial-wrapper {
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        background-color: rgba(0, 0, 0, 0.048);
+        min-height: 40%;
+        width: 80%;
+        border-radius: 3px;
+
+    }
+
+    .testimonial-card blockquote {
+        padding: 4vh 4vw;
+    }
+
+    .testimonial-card blockquote p {
+        color: rgb(78, 78, 78);
+        font-size: 15px;
+        margin-bottom: 2vh;
+
+    }
+
+    .testimonial-card blockquote hr {
+        margin-bottom: 1vh;
+    }
+
+    /*Newsletter styles*/
+
+    #newsletter-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 30vh;
+        background-color: #758A48;
+        color: white;
+    }
+
+    .newsletter-wrapper {
+        margin: 3vh 0;
+    }
+
+    .email-button {
+        border: none;
+        font-size: 15px;
+        background-color: black;
+        color: white;
+        padding: 1vh;
+
+    }
+    #email {
+        border: none;
+        font-size: 15px;
+        color: white;
+        padding: 1vh;
+
+    }
+
+    .newsletter-headline {
+        margin-bottom: 1vh;
+        text-align: center;
+    }
+    .newsletter-headline h2{
+        color: white;
+        font-size: 35px;
+        text-align: center;
+        font-weight: 900;
+        margin-bottom: 1vh;
+    }
+
+    /*footer styles */
 
     #main-footer {
         display: flex;
